# WIFI_FileTransfer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_zh.md
licenses/: GCC-Exception.txt
src/: FileTransfer.cpp  FileTransfer.hpp  WFTheader.cpp  WFTheader.hpp  httpFileServer.cpp  httpFileServer.hpp  main.cpp
